--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ title: HuaiHuai
 subtitle:
 description:
 author: SilenceFei
+avatar: http://omuqw2to1.bkt.clouddn.com/man.jpg
 language: zh-Hans
 timezone:
 
